--- a/assets/css/Untitled-1.css
+++ b/assets/css/Untitled-1.css
@@ -8,15 +8,6 @@ body {
     background-color: #d9dcd6;
 }
 
-a {
-    color: #ffffff;
-    text-decoration: none;
-}
-
-p {
-    font-size: 16px;
-}
-
 header {
     padding: 20px;
     font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
@@ -24,12 +15,12 @@ header {
     color: #ffffff;
 }
 
-header h1 {
+h1 {
     display: inline-block;
     font-size: 48px;
 }
 
-header h1 .seo {
+.seo {
     color: #d9dcd6;
 }
 
@@ -40,16 +31,22 @@ nav {
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
     font-size: 20px;
 }
-nav ul {
-    list-style-type: none;
-}
 
-nav ul li {
+li {
     display: inline-block;
     margin-left: 25px;
 }
 
-.section {
+a {
+    color: #ffffff;
+    text-decoration: none;
+}
+
+p {
+    font-size: 16px;
+}
+
+section {
     height: 800px;
     width: 100%;
     margin-bottom: 25px;
@@ -74,7 +71,16 @@ main {
     margin-left: 20px;
 }
 
-.search-engine-optimization, .online-reputation-management, .social-media-marketing {
+h2 {
+    margin-bottom: 20px;
+    font-size: 36px;
+}
+
+main img {
+    max-height: 200px;
+}
+
+.main {
     margin-bottom: 20px;
     padding: 50px;
     height: 300px;
@@ -83,16 +89,7 @@ main {
     color: #ffffff;
 }
 
-main img {
-    max-height: 200px;
-}
-
-main h2 {
-    margin-bottom: 20px;
-    font-size: 36px;
-}
-
-.benefits {
+aside {
     margin-right: 20px;
     padding: 20px;
     clear: both;
@@ -103,22 +100,20 @@ main h2 {
     background-color: #2589bd;
 }
 
-.benefit-lead, .benefit-brand, .benefit-cost {
-    margin-bottom: 32px;
-    color: #ffffff;
-}
-
-
-.benefits h3 {
+h3 {
     margin-bottom: 10px;
     text-align: center;
 }
 
-
-.benefits img {
+aside img {
     display: block;
     margin: 10px auto;
     max-width: 150px;
+}
+
+.benefits {
+    margin-bottom: 32px;
+    color: #ffffff;
 }
 
 footer {
@@ -128,6 +123,6 @@ footer {
     text-align: center;
 }
 
-footer h4 {
+footer h2 {
     font-size: 20px;
 }
